--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "ui-label",
   "dependencies": {
-    "ember": "~2.9.0-beta.1",
-    "ember-cli-shims": "0.1.3"
+    "ember": "~2.8.1",
+    "ember-cli-shims": "0.1.3",
+    "showdown": "^1.4.0"
   }
 }
