--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.10",
+    "simple-git": "^1.53.0",
     "ui-markdown": "0.1.12"
   },
   "keywords": [
