--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ui-tag",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "The default blueprint for ember-cli addons.",
   "directories": {
     "doc": "doc",
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "^2.4.5",
     "broccoli-funnel": "^1.0.7",
     "broccoli-merge-trees": "^1.1.4",
+    "chalk": "^1.1.3",
     "ember-ajax": "^2.4.1",
     "ember-cli": "2.9.0-beta.2",
     "ember-cli-app-version": "^2.0.0",
@@ -41,6 +42,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.10",
+    "node-sass": "^3.10.1",
     "simple-git": "^1.53.0",
     "ui-markdown": "0.1.12"
   },
